Striver BS: Binary Search - 15

--- a/study/striver-A2Z/09-binary-search.ipynb
+++ b/study/striver-A2Z/09-binary-search.ipynb
@@ -3389,6 +3389,7 @@
      "iopub.status.idle": "2024-04-01T17:06:10.057779Z",
      "shell.execute_reply": "2024-04-01T17:06:10.056955Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.049831,
      "end_time": "2024-04-01T17:06:10.059381",
@@ -3445,6 +3446,181 @@
     "    temp[0].sort(axis=1)\n",
     "    temp[0].sort(axis=0)\n",
     "    assert searchMatrix_II(temp[0], temp[1]) == searchMatrix_II_striverr(temp[0], temp[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a54162f0",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=nGGp5XBzC4g&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=71\n",
+    "Find Peak Element - II"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cbfa572",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Time Complexity - O(M + N), Space Complexity - O(M + N)\n",
+    "# https://leetcode.com/problems/find-a-peak-element-ii/submissions/1220609319\n",
+    "def findPeakGrid(mat: list[list[int]]) -> tuple[int, int]:\n",
+    "    def getPeak(i: int, j: int) -> tuple[int, int]:\n",
+    "        peak = i, j\n",
+    "        if j > 0 and mat[i][j - 1] > mat[peak[0]][peak[1]]:\n",
+    "            peak = i, j - 1\n",
+    "        if j < N - 1 and mat[i][j + 1] > mat[peak[0]][peak[1]]:\n",
+    "            peak = i, j + 1\n",
+    "        if i > 0 and mat[i - 1][j] > mat[peak[0]][peak[1]]:\n",
+    "            peak = i - 1, j\n",
+    "        if i < M - 1 and mat[i + 1][j] > mat[peak[0]][peak[1]]:\n",
+    "            peak = i + 1, j\n",
+    "        return peak\n",
+    "\n",
+    "    M, N = len(mat), len(mat[0])\n",
+    "    i, j = 0, 0\n",
+    "    while getPeak(i, j) != (i, j):\n",
+    "        i, j = getPeak(i, j)\n",
+    "    return i, j\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findPeakGrid([[10,20,15],[21,30,14],[7,16,32]]) in ((1, 1), (2, 2))\n",
+    "assert findPeakGrid([[1,4],[3,2]]) in ((0, 1), (1, 0))\n",
+    "assert findPeakGrid([[7,2,3,1,2],[6,5,4,2,1]]) in ((0, 0),)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "529479ab",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Reduced Time Complexity: O(N log M)\n",
+    "# https://leetcode.com/problems/find-a-peak-element-ii/submissions/1220636332/\n",
+    "def findPeakGrid(mat: list[list[int]]) -> tuple[int, int]:\n",
+    "    M, N = len(mat), len(mat[0])\n",
+    "    low, high = 0, M - 1\n",
+    "    while low <= high:\n",
+    "        middle_row = (low + high) // 2\n",
+    "        max_col = 0\n",
+    "        for i in range(1, N):\n",
+    "            if mat[middle_row][i] > mat[middle_row][max_col]:\n",
+    "                max_col = i\n",
+    "\n",
+    "        top = mat[middle_row - 1][max_col] if middle_row - 1 >= 0 else -math.inf\n",
+    "        bottom = mat[middle_row + 1][max_col] if middle_row + 1 < M else -math.inf\n",
+    "        curr = mat[middle_row][max_col]\n",
+    "        if top < curr > bottom:\n",
+    "            return middle_row, max_col\n",
+    "        elif top > curr:\n",
+    "            high = middle_row - 1\n",
+    "        else:\n",
+    "            low = middle_row + 1\n",
+    "\n",
+    "    return -1, -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findPeakGrid([[10,20,15],[21,30,14],[7,16,32]]) in ((1, 1), (2, 2))\n",
+    "assert findPeakGrid([[1,4],[3,2]]) in ((0, 1), (1, 0))\n",
+    "assert findPeakGrid([[7,2,3,1,2],[6,5,4,2,1]]) in ((0, 0),)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d90f55f6",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/Q9wXgdxJq48?si=AvyxHYbdotetHALU\n",
+    "https://www.naukri.com/code360/problems/median-of-a-row-wise-sorted-matrix_1115473"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb475dc7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Brute force - O(M * N)\n",
+    "def matrixMedian_brute(matrix: list[list[int]], M: int, N: int) -> float:\n",
+    "\n",
+    "    # Total count of elements\n",
+    "    T = M * N\n",
+    "\n",
+    "    # Flatten  & sort the matrix - O(M * N) + O(M + N log (M + N))\n",
+    "    flattened: list[int] = sorted([n for row in matrix for n in row])\n",
+    "\n",
+    "    # Return median - O(1)\n",
+    "    if T % 2 == 0:\n",
+    "        return (flattened[T // 2 - 1] + flattened[T // 2]) / 2\n",
+    "    else:\n",
+    "        return flattened[T // 2]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert matrixMedian_brute([[1, 5, 7, 9, 11], [2, 3, 4, 8, 9], [4, 11, 14, 19, 20], [6, 10, 22, 99, 100], [7, 15, 17, 24, 28]], 5, 5) == 10\n",
+    "assert matrixMedian_brute([[1, 2, 3, 4, 5], [8, 9, 11, 12, 13], [21, 23, 25, 27, 29]], 3, 5) == 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ade4ca0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Better solution, O(M log (M + N))\n",
+    "def matrixMedian(matrix: list[list[int]], M: int, N: int) -> float:\n",
+    "\n",
+    "    def count_row(row_idx: int, target: int) -> int:\n",
+    "        # Upper Bound\n",
+    "        low, high = 0, N - 1\n",
+    "        while low <= high:\n",
+    "            mid = (low + high) // 2\n",
+    "            curr = matrix[row_idx][mid]\n",
+    "            if curr <= target:\n",
+    "                low = mid + 1\n",
+    "            else:\n",
+    "                high = mid - 1\n",
+    "\n",
+    "        return high + 1\n",
+    "\n",
+    "    def count_matrix(target: int) -> int:\n",
+    "        count = 0\n",
+    "        for row in range(M):\n",
+    "            count  += count_row(row, target)\n",
+    "        return count\n",
+    "\n",
+    "    # Total count of elements\n",
+    "    T = M * N\n",
+    "\n",
+    "    # Find Min, Max\n",
+    "    min_, max_ = matrix[0][0], matrix[0][-1]\n",
+    "    for i in range(M):\n",
+    "        min_ = min(min_, matrix[i][0])\n",
+    "        max_ = max(max_, matrix[i][-1])\n",
+    "\n",
+    "    # Binary search for median\n",
+    "    low, high = min_, max_\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if count_matrix(mid) > (T // 2):\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "    return low\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert matrixMedian([[1, 5, 7, 9, 11], [2, 3, 4, 8, 9], [4, 11, 14, 19, 20], [6, 10, 22, 99, 100], [7, 15, 17, 24, 28]], 5, 5) == 10\n",
+    "assert matrixMedian([[1, 2, 3, 4, 5], [8, 9, 11, 12, 13], [21, 23, 25, 27, 29]], 3, 5) == 11"
    ]
   }
  ],
