--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -116,7 +116,7 @@
     "        return str(self.val)\n",
     "\n",
     "    @staticmethod\n",
-    "    def from_array(nums: List[int|None]):\n",
+    "    def from_array(nums: list[int|None]):\n",
     "        '''Create a Tree from a list of nums. Returns the root node.'''\n",
     "        if len(nums) == 0:\n",
     "            return None\n",
@@ -288,9 +288,9 @@
     "# Link: https://leetcode.com/problems/find-bottom-left-tree-value/submissions/1188894879/\n",
     "class Solution:\n",
     "    def findBottomLeftValue(self, root: BinaryTreeNode) -> int:\n",
-    "        next_: List[BinaryTreeNode] = [root]\n",
+    "        next_: list[BinaryTreeNode] = [root]\n",
     "        while True:\n",
-    "            next_next_: List[BinaryTreeNode] = []\n",
+    "            next_next_: list[BinaryTreeNode] = []\n",
     "            for node in next_:\n",
     "                if node.left:\n",
     "                    next_next_.append(node.left)\n",
@@ -812,7 +812,7 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def search(self, nums: List[int], target: int) -> int:\n",
+    "    def search(self, nums: list[int], target: int) -> int:\n",
     "        N = len(nums)\n",
     "        low, high = 0, N - 1\n",
     "        while low <= high:\n",
@@ -1199,6 +1199,7 @@
      "iopub.status.idle": "2024-03-31T04:08:02.962180Z",
      "shell.execute_reply": "2024-03-31T04:08:02.961407Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.015523,
      "end_time": "2024-03-31T04:08:02.963765",
@@ -1226,6 +1227,143 @@
     "# Testing the solution\n",
     "assert Solution().countAlternatingSubarrays([1,0,1,0]) == 10\n",
     "assert Solution().countAlternatingSubarrays( [0,1,1,1]) == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa42e3c4",
+   "metadata": {},
+   "source": [
+    "Easy Leetcode question: https://leetcode.com/problems/minimum-common-value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2e96902",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def getCommon(nums1: list[int], nums2: list[int]) -> int:\n",
+    "    N1, N2 = len(nums1), len(nums2)\n",
+    "    i = j = 0\n",
+    "    while i < N1 and j < N2:\n",
+    "        if nums1[i] == nums2[j]:\n",
+    "            return nums1[i]\n",
+    "        elif nums1[i] < nums2[j]:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            j += 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert getCommon([1, 2, 3], [2, 4]) == 2\n",
+    "assert getCommon([1, 2, 3], [4, 5, 6]) == -1\n",
+    "assert getCommon([1, 2, 3], [3]) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60f3c0df",
+   "metadata": {},
+   "source": [
+    "Diameter of binary Tree\n",
+    "Problem Link: https://leetcode.com/problems/diameter-of-binary-tree/submissions/1222192232"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0fb0a0f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def diameterOfBinaryTree(root: BinaryTreeNode) -> int:\n",
+    "    \"\"\"\n",
+    "    1. Perform a post order traversal\n",
+    "    2. Keep updating a global max_ variable as max(max_, left + right) before returning. This is our final result.\n",
+    "    3. At each recursive step, return max(left, right)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    result: int = 0\n",
+    "    def postOrder(curr: BinaryTreeNode) -> int:\n",
+    "        nonlocal result\n",
+    "        if not curr:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            left_max = postOrder(curr.left)\n",
+    "            right_max = postOrder(curr.right)\n",
+    "            result = max(result, left_max + right_max)\n",
+    "            return max(left_max, right_max) + 1\n",
+    "\n",
+    "    postOrder(root)\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert diameterOfBinaryTree(BinaryTreeNode.from_array([1, 2, 3, 4, 5])) == 3\n",
+    "assert diameterOfBinaryTree(BinaryTreeNode.from_array([1, 2])) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95066bc4",
+   "metadata": {},
+   "source": [
+    "Easy Leetcode question \n",
+    "Problem Link: https://leetcode.com/problems/largest-3-same-digit-number-in-string/submissions/1222201215/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd3767a4",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def largestGoodInteger(num: str) -> str:\n",
+    "    for n in \"9876543210\":\n",
+    "        if n * 3 in num:\n",
+    "            return n * 3\n",
+    "    else:\n",
+    "        return \"\"\n",
+    "\n",
+    "# Testing the solution\n",
+    "largestGoodInteger(\"6777133339\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90d38ef2",
+   "metadata": {},
+   "source": [
+    "Easy Leetcode question\n",
+    "Problem Link: https://leetcode.com/problems/largest-odd-number-in-string/submissions/1222208825"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba91d179",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def largestOddNumber(num: str) -> str:\n",
+    "    N = len(num)\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        if int(num[i]) % 2 == 1:\n",
+    "            return num[:i + 1]\n",
+    "    else:\n",
+    "        return \"\"\n",
+    "\n",
+    "# Testing the solution\n",
+    "largestOddNumber(\"354278\")"
    ]
   }
  ],
