--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -304,6 +304,7 @@
      "iopub.status.idle": "2024-04-03T02:22:54.416399Z",
      "shell.execute_reply": "2024-04-03T02:22:54.415617Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011309,
      "end_time": "2024-04-03T02:22:54.418002",
@@ -335,6 +336,122 @@
     "# Testing the solution\n",
     "assert levelOrder(BinaryTreeNode.from_array([3,9,20,None,None,15,7])) == [[3], [9, 20], [15, 7]]\n",
     "assert levelOrder(BinaryTreeNode.from_array([1])) == [[1]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d59819aa",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=Bfqd8BsPVuw&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=81\n",
+    "Iterative Preorder traversal\n",
+    "\n",
+    "# %%\n",
+    "def preorderIter(root: BinaryTreeNode) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Root, Left, Right. The idea is the push right first and then the left,\n",
+    "    since stack only works when we are popping -1 at each step.\n",
+    "\n",
+    "    Time: O(N), Space: O(Height of Binary Tree)\n",
+    "    \"\"\"\n",
+    "    result: list[int] = []\n",
+    "    stack: list[BinaryTreeNode] = [root]\n",
+    "    while stack:\n",
+    "        curr = stack.pop()\n",
+    "        if curr:\n",
+    "            result.append(curr.val)\n",
+    "            stack.append(curr.right)\n",
+    "            stack.append(curr.left)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "Testing the solution\n",
+    "assert preorderIter(BinaryTreeNode.from_array([1, None, 2, 3])) == [1, 2, 3]\n",
+    "assert preorderIter(BinaryTreeNode.from_array([1, 2, 7, 3, 4, None, None, None, None, 5, 6])) == [1, 2, 3, 4, 5, 6, 7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a949dc1",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=lxTGsVXjwvM&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=82\n",
+    "Iterative Inorder traversal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f322e25b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def inorderIter(root: BinaryTreeNode) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Left, Root, Right.\n",
+    "\n",
+    "    If curr is not null, move to its left and append curr to the stack.\n",
+    "    Else pop the last item from stack, print it and move to right of the popped element.\n",
+    "    \"\"\"\n",
+    "    result: list[int] = []\n",
+    "    stack: list[BinaryTreeNode] = []\n",
+    "    curr = root\n",
+    "    while True:\n",
+    "        if curr:\n",
+    "            stack.append(curr)\n",
+    "            curr = curr.left\n",
+    "        else:\n",
+    "            if stack:\n",
+    "                curr = stack.pop()\n",
+    "                result.append(curr.val)\n",
+    "                curr = curr.right\n",
+    "            else:\n",
+    "                break\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert inorderIter(BinaryTreeNode.from_array([1, None, 2, 3])) == [1, 3 ,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc03474b",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=2YBhNLodD8Q&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=83\n",
+    "Iterative post order traversal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a728f1cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def postorderIter(root: BinaryTreeNode) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Left, Right, Root.\n",
+    "\n",
+    "    Go root, right, left similar to how we do preorder and reverse the result.\n",
+    "    \"\"\"\n",
+    "    stack1: list[BinaryTreeNode] = [root]\n",
+    "    stack2: list[int] = []\n",
+    "    while stack1:\n",
+    "        curr = stack1.pop()\n",
+    "        if curr:\n",
+    "            stack2.append(curr.val)\n",
+    "            stack1.append(curr.left)\n",
+    "            stack1.append(curr.right)\n",
+    "\n",
+    "    stack2.reverse()\n",
+    "    return stack2\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert postorderIter(BinaryTreeNode.from_array([1, 2, 3, 4, 5, 6, None, None, None, None, None, None, 7])) == [4, 5, 2, 7, 6, 3, 1]"
    ]
   }
  ],
