Striver A2Z: Binary Trees - 3

--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -270,10 +270,11 @@
     "    inorder(root)\n",
     "    preorder(root)\n",
     "    postorder(root)\n",
-    "    return (inorder_, preorder_ ,postorder_)\n",
+    "    return (preorder_, inorder_, postorder_)\n",
+    "    return (inorder_, preorder_, postorder_)\n",
     "\n",
     "# Testing the solution\n",
-    "assert getTreeTraversal(BinaryTreeNode.from_array([1, 3, 4, 5, 2, 7, 6])) == ([5, 3, 2, 1, 7, 4, 6], [1, 3, 5, 2, 4, 7, 6], [5, 2, 3, 7, 6, 4, 1])"
+    "assert getTreeTraversal(BinaryTreeNode.from_array([1, 3, 4, 5, 2, 7, 6])) == ([1, 3, 5, 2, 4, 7, 6], [5, 3, 2, 1, 7, 4, 6], [5, 2, 3, 7, 6, 4, 1])"
    ]
   },
   {
@@ -477,6 +478,7 @@
      "iopub.status.idle": "2024-04-04T01:09:46.339113Z",
      "shell.execute_reply": "2024-04-04T01:09:46.338459Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.012302,
      "end_time": "2024-04-04T01:09:46.340845",
@@ -508,6 +510,95 @@
     "\n",
     "# Testing the solution\n",
     "assert postorderIter(BinaryTreeNode.from_array([1, 2, 3, 4, 5, 6, None, None, None, None, None, None, 7])) == [4, 5, 2, 7, 6, 3, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2506b05",
+   "metadata": {},
+   "source": [
+    "Video Link: https://www.youtube.com/watch?v=NzIGLLwZBS8&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=84\n",
+    "Iterative post order traversal using single stack\n",
+    "From striver: \"This topic is bit tricky, so try to dry run some trees. Its kinda algorithm that you need to remember. Cannot help\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8f98a3a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def postorderIter_single_stack(root: BinaryTreeNode) -> list[int]:\n",
+    "    \"Time: O(2N), Space: O(N)\"\n",
+    "    result: list[int] = []\n",
+    "    stack: list[BinaryTreeNode] = []\n",
+    "    curr = root\n",
+    "    while curr or stack:\n",
+    "        if curr:\n",
+    "            stack.append(curr)\n",
+    "            curr = curr.left\n",
+    "        else:\n",
+    "            temp = stack[-1].right\n",
+    "            if not temp:\n",
+    "                temp = stack.pop()\n",
+    "                result.append(temp.val)\n",
+    "                while stack and temp == stack[-1].right:\n",
+    "                    temp = stack.pop()\n",
+    "                    result.append(temp.val)\n",
+    "            else:\n",
+    "                curr = temp\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "postorderIter_single_stack(BinaryTreeNode.from_array([1, 2, 7, 3, None, 8, None, None, 4, None, None, None, 5, None, 6]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd401b3e",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/ySp2epYvgTE?si=TItCZRCbbFnyQlyi\n",
+    "Post Order, In Order, Pre Order Traversal in one iteration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac069236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getTreeTraversal_single_traversal(root: BinaryTreeNode) -> tuple[list[int], list[int], list[int]]:\n",
+    "    \"Time: O(3N), Space: O(1)\"\n",
+    "\n",
+    "    preorder: list[int] = []\n",
+    "    inorder: list[int] = []\n",
+    "    postorder: list[int] = []\n",
+    "\n",
+    "    stack: list[tuple[BinaryTreeNode, int]] = [(root, 1)]\n",
+    "    while stack:\n",
+    "        curr, op = stack.pop()\n",
+    "        if curr and op == 1:\n",
+    "            preorder.append(curr.val)\n",
+    "            stack.append((curr, op + 1))\n",
+    "            stack.append((curr.left, 1))\n",
+    "        elif curr and op == 2:\n",
+    "            inorder.append(curr.val)\n",
+    "            stack.append((curr, op + 1))\n",
+    "            stack.append((curr.right, 1))\n",
+    "        else:\n",
+    "            if curr:\n",
+    "                postorder.append(curr.val)\n",
+    "\n",
+    "    return preorder, inorder, postorder\n",
+    "\n",
+    "temp = BinaryTreeNode.from_array([1, 3, 4, 5, 2, 7, 6])\n",
+    "assert getTreeTraversal(temp) == getTreeTraversal_single_traversal(temp)"
    ]
   }
  ],
