LC Play: 5th Apr

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -1447,6 +1447,7 @@
      "iopub.status.idle": "2024-04-03T15:29:46.582185Z",
      "shell.execute_reply": "2024-04-03T15:29:46.581342Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.01861,
      "end_time": "2024-04-03T15:29:46.583852",
@@ -1479,6 +1480,35 @@
     "\n",
     "# Testing the solution\n",
     "largestOddNumber(\"354278\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84ba2176",
+   "metadata": {},
+   "source": [
+    "Leetcode easy problem: https://leetcode.com/problems/make-the-string-great/submissions/1224126212"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94ade9d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makeGood(s: str) -> str:\n",
+    "    stack: list[str] = []\n",
+    "    for c in s:\n",
+    "        if not stack or c.lower() != stack[-1].lower() or ord(c) == ord(stack[-1]):\n",
+    "            stack.append(c)\n",
+    "        else:\n",
+    "            stack.pop()\n",
+    "\n",
+    "    return \"\".join(stack)\n",
+    "\n",
+    "assert makeGood(\"leeEetcode\") == \"leetcode\"\n",
+    "assert makeGood(\"abBAcC\") == \"\""
    ]
   }
  ],
