--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -41,6 +41,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d2598bc",
+   "metadata": {},
+   "source": [
+    "#### Some useful imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b692ea03",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c70ac08c",
    "metadata": {
     "papermill": {
@@ -620,6 +640,7 @@
      "iopub.status.idle": "2024-04-05T01:28:46.093683Z",
      "shell.execute_reply": "2024-04-05T01:28:46.093051Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.015329,
      "end_time": "2024-04-05T01:28:46.095340",
@@ -655,8 +676,209 @@
     "\n",
     "    return preorder, inorder, postorder\n",
     "\n",
+    "# Testing the solution\n",
     "temp = BinaryTreeNode.from_array([1, 3, 4, 5, 2, 7, 6])\n",
     "assert getTreeTraversal(temp) == getTreeTraversal_single_traversal(temp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5689f6ec",
+   "metadata": {},
+   "source": [
+    "Maximum Depth of a Binary Tree: https://www.youtube.com/watch?v=eD3tmO66aBA&list=PLgUwDviBIf0oF6QL8m22w1hIDC1vJ_BHz&index=86"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77506355",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Level Order Traversal\n",
+    "def maxDepthIter(root: BinaryTreeNode) -> int:\n",
+    "    \"Time: O(N), Space: O(N)\"\n",
+    "\n",
+    "    to_traverse: list[BinaryTreeNode] = [root]\n",
+    "    height = 0\n",
+    "    while to_traverse:\n",
+    "        height += 1\n",
+    "        next_: list[BinaryTreeNode] = []\n",
+    "        for node in to_traverse:\n",
+    "            if node:\n",
+    "                next_.append(node.left)\n",
+    "                next_.append(node.right)\n",
+    "        to_traverse = next_\n",
+    "\n",
+    "    return height - 1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxDepthIter(BinaryTreeNode.from_array([3,9,20,None,None,15,7])) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad1799a0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maxDepthRecursive(root: BinaryTreeNode) -> int:\n",
+    "\n",
+    "    max_: int = 0\n",
+    "    def backtrack(curr: BinaryTreeNode, height: int = 0):\n",
+    "        nonlocal max_\n",
+    "        if not curr:\n",
+    "            max_ = max(max_, height)\n",
+    "            return\n",
+    "        else:\n",
+    "            backtrack(curr.left, height + 1)\n",
+    "            backtrack(curr.right, height + 1)\n",
+    "\n",
+    "    backtrack(root)\n",
+    "    return max_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxDepthRecursive(BinaryTreeNode.from_array([3,9,20,None,None,15,7])) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "593ac16d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maxDepthStriver(root: BinaryTreeNode) -> int:\n",
+    "    if not root:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        left = maxDepthStriver(root.left)\n",
+    "        right = maxDepthStriver(root.right)\n",
+    "        return 1 + max(left, right)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxDepthStriver(BinaryTreeNode.from_array([3,9,20,None,None,15,7])) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83812466",
+   "metadata": {},
+   "source": [
+    "Check for balanced Binary Tree: https://youtu.be/Yt50Jfbd8Po?si=pqjd9p-_S-9vRrmG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc21bd9b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isBalanced(root: BinaryTreeNode) -> bool:\n",
+    "    def checkHeight(curr: BinaryTreeNode) -> int:\n",
+    "        if not curr:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            left = checkHeight(curr.left)\n",
+    "            if left == -1:\n",
+    "                return -1\n",
+    "            right = checkHeight(curr.right)\n",
+    "            if right == -1:\n",
+    "                return -1\n",
+    "            if abs(left - right) > 1:\n",
+    "                return -1\n",
+    "            else:\n",
+    "                return 1 + max(left, right)\n",
+    "\n",
+    "    return checkHeight(root) != -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isBalanced(BinaryTreeNode.from_array([1,2,2,3,3,None,None,4,4])) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77ff8f23",
+   "metadata": {},
+   "source": [
+    "Diameter of Binary Tree: https://youtu.be/Rezetez59Nk?si=9WeCIb_ik5elrVZm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce78d08b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def diameterOfBinaryTree(root: BinaryTreeNode) -> int:\n",
+    "\n",
+    "    diameter: int = 0\n",
+    "    def checkHeight(curr: BinaryTreeNode) -> int:\n",
+    "        nonlocal diameter\n",
+    "        if not curr:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            left = checkHeight(curr.left)\n",
+    "            right = checkHeight(curr.right)\n",
+    "            diameter = max(diameter, left + right)\n",
+    "            return 1 + max(left, right)\n",
+    "\n",
+    "    checkHeight(root)\n",
+    "    return diameter\n",
+    "\n",
+    "# Testing the solution\n",
+    "diameterOfBinaryTree(BinaryTreeNode.from_array([1,2,3,4,5]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "089181e0",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/WszrfSwMz58?si=daE6TYubT_j5MKuT\n",
+    "Maximum Path Sum: https://leetcode.com/problems/binary-tree-maximum-path-sum/submissions/1224438073"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4192b725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxPathSum(root: BinaryTreeNode) -> float:\n",
+    "    max_sum: float = -math.inf\n",
+    "    def backtrack(curr: BinaryTreeNode) -> float:\n",
+    "        nonlocal max_sum\n",
+    "        if not curr:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            left = max(0, backtrack(curr.left))\n",
+    "            right = max(0, backtrack(curr.right))\n",
+    "            max_sum = max(max_sum, left + right + curr.val)\n",
+    "            return curr.val + max(left, right)\n",
+    "\n",
+    "    backtrack(root)\n",
+    "    return max_sum\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxPathSum(BinaryTreeNode.from_array([-10,9,20,None,None,15,7])) == 42\n",
+    "assert maxPathSum(BinaryTreeNode.from_array([1, -2, 3])) == 4\n",
+    "assert maxPathSum(BinaryTreeNode.from_array([9,6,-3,None,None,-6,2,None,None,2,None,-6,-6,-6])) == 16"
    ]
   }
  ],
