Striver A2Z: Binary Trees - 5, Code Gladiators

--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -79,7 +79,9 @@
    },
    "outputs": [],
    "source": [
-    "import math"
+    "import math\n",
+    "import collections\n",
+    "import itertools"
    ]
   },
   {
@@ -1004,6 +1006,7 @@
      "iopub.status.idle": "2024-04-06T02:18:23.781697Z",
      "shell.execute_reply": "2024-04-06T02:18:23.780933Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016306,
      "end_time": "2024-04-06T02:18:23.783297",
@@ -1034,6 +1037,142 @@
     "assert maxPathSum(BinaryTreeNode.from_array([-10,9,20,None,None,15,7])) == 42\n",
     "assert maxPathSum(BinaryTreeNode.from_array([1, -2, 3])) == 4\n",
     "assert maxPathSum(BinaryTreeNode.from_array([9,6,-3,None,None,-6,2,None,None,2,None,-6,-6,-6])) == 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bdad953",
+   "metadata": {},
+   "source": [
+    "Check if two trees are identical or not\n",
+    "Video Link: https://youtu.be/BhuvF_-PWS0?si=C1iPAcpAICZHWRSr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a2627c8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isSameTree(p: BinaryTreeNode, q: BinaryTreeNode) -> bool:\n",
+    "    def backtrack(curr1: BinaryTreeNode, curr2: BinaryTreeNode) -> bool:\n",
+    "        if not curr1 or not curr2:\n",
+    "            return curr1 == curr2\n",
+    "        else:\n",
+    "            return curr1.val == curr2.val and backtrack(curr1.left, curr2.left) and backtrack(curr1.right, curr2.right)\n",
+    "\n",
+    "    return backtrack(p, q)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isSameTree(BinaryTreeNode.from_array([1, 2, 3]), BinaryTreeNode.from_array([1, 2, 3])) == True\n",
+    "assert isSameTree(BinaryTreeNode.from_array([1, 2]), BinaryTreeNode.from_array([1, None, 2])) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f64cc1b",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/3OXWEdlIGl4?si=prGw3PDHdgEpFJgj\n",
+    "Zig Zag / Spiral Traversal in a Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "220a0708",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Leetcode Medium: https://leetcode.com/problems/binary-tree-zigzag-level-order-traversal/submissions/1225227141\n",
+    "def zigzagLevelOrder(root: BinaryTreeNode) -> list[list[int]]:\n",
+    "    \"\"\"\n",
+    "    Perform a level order traversal, store the results into a deque.\n",
+    "    Based on level#, traverse from left node to right or vice versa.\n",
+    "    \"\"\"\n",
+    "    to_visit: list[BinaryTreeNode] = [root]\n",
+    "    result: list[list[int]] = []\n",
+    "    level = 1\n",
+    "    while to_visit:\n",
+    "        next_: list[BinaryTreeNode] = []\n",
+    "        result.append([])\n",
+    "        for curr in to_visit:\n",
+    "            if curr:\n",
+    "                result[-1].append(curr.val)\n",
+    "                next_.append(curr.left)\n",
+    "                next_.append(curr.right)\n",
+    "\n",
+    "        if not result[-1]:\n",
+    "            result.pop()\n",
+    "        elif level % 2 == 0:\n",
+    "            result[-1].reverse()\n",
+    "\n",
+    "        to_visit = next_\n",
+    "        level += 1\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert zigzagLevelOrder(BinaryTreeNode.from_array([3,9,20,None,None,15,7])) == [[3],[20,9],[15,7]]\n",
+    "assert zigzagLevelOrder(BinaryTreeNode.from_array([1,2,3,4,None,None,5])) == [[1],[3,2],[4,5]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83e73a04",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/0ca1nvR0be4?si=Er0-Y8gxhnKlWt6-\n",
+    "Boundary Traversal in a Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e63f2c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def traverseBoundary(root: BinaryTreeNode) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Left boundary excluding leaves, Leaf nodes, Right Boundary excluding leaves\n",
+    "    \"\"\"\n",
+    "\n",
+    "    left: list[int] = []\n",
+    "    curr = root.left\n",
+    "    while curr and (curr.left or curr.right):\n",
+    "        left.append(curr.val)\n",
+    "        curr = curr.left if curr.left else curr.right\n",
+    "\n",
+    "    boundary: list[int] = []\n",
+    "    def getLeaves(curr: BinaryTreeNode):\n",
+    "        nonlocal boundary\n",
+    "        if not curr:\n",
+    "            return\n",
+    "        else:\n",
+    "            if not curr.left and not curr.right:\n",
+    "                boundary.append(curr.val)\n",
+    "            getLeaves(curr.left)\n",
+    "            getLeaves(curr.right)\n",
+    "\n",
+    "    right: list[int] = []\n",
+    "    curr = root.right\n",
+    "    while curr and (curr.left or curr.right):\n",
+    "        right.append(curr.val)\n",
+    "        curr = curr.right if curr.right else curr.left\n",
+    "    right.reverse()\n",
+    "\n",
+    "    getLeaves(root)\n",
+    "    return [root.val] + left + boundary + right\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert traverseBoundary(BinaryTreeNode.from_array([10, 5, 20, 3, 8, 18, 25, None, None, 7, None, None, None, None, None, None, None])) == [10, 5, 3, 7, 18, 25, 20]\n",
+    "assert traverseBoundary(BinaryTreeNode.from_array([100, 50, 150, 25, 75, 140, 200, None, 30, 70, 80, None, None, None, None, None, 35, None, None, None, None, None, None])) == [100, 50, 25, 30, 35, 70, 80, 140, 200, 150]"
    ]
   }
  ],
