--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -1510,6 +1510,7 @@
      "iopub.status.idle": "2024-04-05T16:28:07.816272Z",
      "shell.execute_reply": "2024-04-05T16:28:07.815463Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.018065,
      "end_time": "2024-04-05T16:28:07.818014",
@@ -1533,6 +1534,73 @@
     "\n",
     "assert makeGood(\"leeEetcode\") == \"leetcode\"\n",
     "assert makeGood(\"abBAcC\") == \"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5cc8f93",
+   "metadata": {},
+   "source": [
+    "#### Code Gladiators - 2k24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fe7023d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q1\n",
+    "def Q1(P: int, X: int, R1: int, N: int, Y: int, R2: int):\n",
+    "\n",
+    "    # Get travel time for comparison\n",
+    "    t1 = (P / X) + R1\n",
+    "    t2 = (N / Y) + R2\n",
+    "\n",
+    "    if t1 < t2:\n",
+    "        return \"NINA\"\n",
+    "    elif t1 > t2:\n",
+    "        return \"PAUL\"\n",
+    "    else:\n",
+    "        return \"BOTH\"\n",
+    "\n",
+    "# Q2:\n",
+    "def Q2(arr: list[int], N: int) -> int:\n",
+    "\n",
+    "    def getPair(i: int, target: int) -> int:\n",
+    "        \"Returns pair index j, such that arr[i] + arr[j] == target, returns -1 if not possible\"\n",
+    "        for j in positions.get(target - arr[i], []):\n",
+    "            if j != i and j not in picked:\n",
+    "                return j\n",
+    "        else:\n",
+    "            return -1\n",
+    "\n",
+    "    # Store all the values to a dict for quick reverse lookups\n",
+    "    positions: dict[int, list] = dict()\n",
+    "    for i in range(N):\n",
+    "        indices: list[int] = positions.get(arr[i], [])\n",
+    "        indices.append(i)\n",
+    "        positions[arr[i]] = indices\n",
+    "\n",
+    "    # Weights can be between 2 * min_, 2 * max_\n",
+    "    max_count = 0\n",
+    "    for total_weight in range(min(arr) * 2, (max(arr) * 2) + 1):\n",
+    "        count = 0\n",
+    "        picked: set[int] = set()\n",
+    "        for i in range(N):\n",
+    "            j = getPair(i, total_weight) if i not in picked else -1\n",
+    "            if j != -1:\n",
+    "                picked.add(i)\n",
+    "                picked.add(j)\n",
+    "                count += 1\n",
+    "\n",
+    "        max_count = max(max_count, count)\n",
+    "\n",
+    "    return max_count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert Q2([1, 1, 3, 4, 2, 2], 6) == 2"
    ]
   }
  ],
