Striver A2Z: Binary Trees - 6

--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -81,7 +81,9 @@
    "source": [
     "import math\n",
     "import collections\n",
-    "import itertools"
+    "import itertools\n",
+    "import bisect\n",
+    "import heapq"
    ]
   },
   {
@@ -1197,6 +1199,7 @@
      "iopub.status.idle": "2024-04-07T14:55:23.584319Z",
      "shell.execute_reply": "2024-04-07T14:55:23.583654Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.020968,
      "end_time": "2024-04-07T14:55:23.585975",
@@ -1243,6 +1246,104 @@
     "# Testing the solution\n",
     "assert traverseBoundary(BinaryTreeNode.from_array([10, 5, 20, 3, 8, 18, 25, None, None, 7, None, None, None, None, None, None, None])) == [10, 5, 3, 7, 18, 25, 20]\n",
     "assert traverseBoundary(BinaryTreeNode.from_array([100, 50, 150, 25, 75, 140, 200, None, 30, 70, 80, None, None, None, None, None, 35, None, None, None, None, None, None])) == [100, 50, 25, 30, 35, 70, 80, 140, 200, 150]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48a971f2",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/q_a6lpbKJdw?si=d1p9utIGRbbi7q84\n",
+    "Vertial order traversal of Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "584c0df0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Problem Link: https://leetcode.com/problems/vertical-order-traversal-of-a-binary-tree/submissions/1226266467\n",
+    "def verticalTraversal(root: BinaryTreeNode) -> list[list[int]]:\n",
+    "    \"\"\"\n",
+    "    Time: O(N log N), Space: O(N)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Time: O(N)\n",
+    "    ordering: list[tuple[int, int, int]] = []\n",
+    "    def backtrack(curr: BinaryTreeNode, i: int, j: int):\n",
+    "        nonlocal ordering\n",
+    "        if not curr:\n",
+    "            return\n",
+    "        else:\n",
+    "            ordering.append((curr.val, i, j))\n",
+    "            backtrack(curr.left, i + 1, j - 1)\n",
+    "            backtrack(curr.right, i + 1, j + 1)\n",
+    "\n",
+    "    # Time: O(N log N)\n",
+    "    backtrack(root, 0, 0)\n",
+    "    ordering.sort(key=lambda x: (x[2], x[1], x[0]))\n",
+    "\n",
+    "    # Time: O(N)\n",
+    "    result: list[list[int]] = []\n",
+    "    prev = ordering[0][2] - 1\n",
+    "    for k, i, j in ordering:\n",
+    "        if j != prev:\n",
+    "            result.append([])\n",
+    "            prev = j\n",
+    "        result[-1].append(k)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert verticalTraversal(BinaryTreeNode.from_array([3,9,20,None,None,15,7])) == [[9], [3, 15], [20], [7]]\n",
+    "assert verticalTraversal(BinaryTreeNode.from_array([1, 2, 3, 4, 5, 6, 7])) == [[4], [2], [1,5,6], [3], [7]]\n",
+    "assert verticalTraversal(BinaryTreeNode.from_array([1, 2, 3, 4, 6, 5, 7])) == [[4], [2], [1, 5, 6], [3], [7]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a99a217",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/Et9OCDNvJ78?si=JB9v3iN8uhAELNkl\n",
+    "Top view of a Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf1035d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def topViewBinaryTree(root: BinaryTreeNode) -> list[int]:\n",
+    "    topView: dict[int, int] = dict()\n",
+    "\n",
+    "    # Level Order Traversal\n",
+    "    stack: list[tuple[BinaryTreeNode, int]] = [(root, 0)]\n",
+    "    while stack:\n",
+    "        next_: list[tuple[BinaryTreeNode, int]] = []\n",
+    "        for curr, j in stack:\n",
+    "            if curr:\n",
+    "                if j not in topView:\n",
+    "                    topView[j] = curr.val\n",
+    "                next_.append((curr.left, j - 1))\n",
+    "                next_.append((curr.right, j + 1))\n",
+    "\n",
+    "        stack = next_\n",
+    "\n",
+    "    result: list[int] = []\n",
+    "    for k, v in sorted(topView.items(), key=lambda x: x[0]):\n",
+    "        result.append(v)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the result\n",
+    "assert topViewBinaryTree(BinaryTreeNode.from_array([1, 2, 3, 4, 5, None, 6, None, 7, None, None, 8, None, 9, None, None, 11, 10, None, None, None, None, None])) == [10, 4,  2, 1, 3, 6]"
    ]
   }
  ],
