Striver A2Z: Binary Trees - 7, LC Practice

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -1564,6 +1564,7 @@
      "iopub.status.idle": "2024-04-07T14:55:20.927211Z",
      "shell.execute_reply": "2024-04-07T14:55:20.926342Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.023105,
      "end_time": "2024-04-07T14:55:20.928951",
@@ -1625,6 +1626,167 @@
     "\n",
     "# Testing the solution\n",
     "assert Q2([1, 1, 3, 4, 2, 2], 6) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10f9ae1d",
+   "metadata": {},
+   "source": [
+    "Problem link: https://leetcode.com/problems/time-needed-to-buy-tickets/submissions/1227477603"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8665a6b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Time: O(N), Space: O(1)\n",
+    "def timeRequiredToBuy(tickets: list[int], k: int) -> int:\n",
+    "    total = 0\n",
+    "    for i in range(len(tickets)):\n",
+    "        if i <= k:\n",
+    "            total += min(tickets[k], tickets[i])\n",
+    "        else:\n",
+    "            total += min(tickets[k] - 1, tickets[i])\n",
+    "\n",
+    "    return total\n",
+    "\n",
+    "# Testing the Solution\n",
+    "assert timeRequiredToBuy(tickets=[5, 1, 1, 1],  k=0) == 8\n",
+    "assert timeRequiredToBuy(tickets=[2, 3, 2], k=2) == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8388f4e",
+   "metadata": {},
+   "source": [
+    "Problem Link: https://leetcode.com/problems/number-of-students-unable-to-eat-lunch/submissions/1227492211"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c54b1d35",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def countStudents(students: list[int], sandwiches: list[int]) -> int:\n",
+    "    stud_pref: dict[int, int] = collections.Counter(students)\n",
+    "    for n in sandwiches:\n",
+    "        if stud_pref.get(n, 0) == 0:\n",
+    "            return stud_pref.get(0, 0) + stud_pref.get(1, 0)\n",
+    "        else:\n",
+    "            stud_pref[n] -= 1\n",
+    "    return 0\n",
+    "\n",
+    "# Testing the Solution\n",
+    "assert countStudents([1,1,0,0], [0,1,0,1]) == 0\n",
+    "assert countStudents([1,1,1,0,0,1], [1,0,0,0,1,1]) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bae9e756",
+   "metadata": {},
+   "source": [
+    "All root to leaf paths in a Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b941cc0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def allRootToLeaf(root: BinaryTreeNode) -> list[str]:\n",
+    "    \"\"\"\n",
+    "    1. Do a pre order traversal.\n",
+    "    2. When a leaf node is encountered. Append the path to result.\n",
+    "    3. If not a leaf node, concat to a growing string path.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    paths: list[str] = []\n",
+    "    def preOrder(curr: BinaryTreeNode, traveled: list[str]):\n",
+    "        traveled.append(str(curr.val))\n",
+    "\n",
+    "        if not curr.left and not curr.right:\n",
+    "            nonlocal paths\n",
+    "            paths.append(\" \".join(traveled))\n",
+    "        if curr.left:\n",
+    "            preOrder(curr.left, traveled)\n",
+    "        if curr.right:\n",
+    "            preOrder(curr.right, traveled)\n",
+    "\n",
+    "        traveled.pop()\n",
+    "\n",
+    "    preOrder(root, [])\n",
+    "    return paths\n",
+    "\n",
+    "# Testing the solution\n",
+    "for ques, ans in (\n",
+    "        ([1, 2, 3, 4, None, 5, 6, None, 7, None, None, None, None, None, None], [\"1 3 5\", \"1 3 6\", \"1 2 4 7\"]),\n",
+    "        ([1, 2, 3, 4, 5, None, None, None, None, None, None], [\"1 2 4\", \"1 2 5\", \"1 3\"]),\n",
+    "    ):\n",
+    "    temp = allRootToLeaf(BinaryTreeNode.from_array(ques))\n",
+    "    for ans_str in ans:\n",
+    "        assert ans_str in temp, f\"{ans_str} not found inside result: {temp}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e07c06f",
+   "metadata": {},
+   "source": [
+    "Problem Link: https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/submissions/1227536364"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfdc7092",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lowestCommonAncestor(root: BinaryTreeNode, p: BinaryTreeNode, q: BinaryTreeNode) -> BinaryTreeNode:\n",
+    "    p_path: list[BinaryTreeNode] = []\n",
+    "    q_path: list[BinaryTreeNode] = []\n",
+    "    def getPathsFromRoot(curr: BinaryTreeNode, traveled: list[BinaryTreeNode]):\n",
+    "        nonlocal p_path, q_path\n",
+    "        traveled.append(curr)\n",
+    "        if curr == p:\n",
+    "            p_path = list(traveled)\n",
+    "        if curr == q:\n",
+    "            q_path = list(traveled)\n",
+    "        if curr.left:\n",
+    "            getPathsFromRoot(curr.left, traveled)\n",
+    "        if curr.right:\n",
+    "            getPathsFromRoot(curr.right, traveled)\n",
+    "        traveled.pop()\n",
+    "\n",
+    "    getPathsFromRoot(root, [])\n",
+    "\n",
+    "    # Find common ancestor\n",
+    "    NP, NQ = len(p_path), len(q_path)\n",
+    "    i = j = 0\n",
+    "    while i < NP and j < NQ and p_path[i] == q_path[j]:\n",
+    "        i, j = i + 1, j + 1\n",
+    "\n",
+    "    return p_path[i - 1]\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp: BinaryTreeNode = BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4])\n",
+    "assert lowestCommonAncestor(temp, p=temp.left, q=temp.left.right.right).val == 5"
    ]
   }
  ],
