--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -1356,6 +1356,7 @@
      "iopub.status.idle": "2024-04-08T01:59:46.011289Z",
      "shell.execute_reply": "2024-04-08T01:59:46.010528Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.019775,
      "end_time": "2024-04-08T01:59:46.012995",
@@ -1391,6 +1392,216 @@
     "\n",
     "# Testing the result\n",
     "assert topViewBinaryTree(BinaryTreeNode.from_array([1, 2, 3, 4, 5, None, 6, None, 7, None, None, 8, None, 9, None, None, 11, 10, None, None, None, None, None])) == [10, 4,  2, 1, 3, 6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b62cb1a9",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/0FtVY6I4pB8?si=pBJ-JgXeSz_WxjCs\n",
+    "Bottom view of a Binary tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1b0d9dd",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def bottomView(root: BinaryTreeNode) -> list[int]:\n",
+    "    ordering: dict[int, int] = dict()\n",
+    "    stack: list[tuple[BinaryTreeNode, int]] = [(root, 0)]\n",
+    "    while stack:\n",
+    "        next_: list[tuple[BinaryTreeNode, int]] = []\n",
+    "        for curr, j in stack:\n",
+    "            if curr:\n",
+    "                ordering[j] = curr.val\n",
+    "                next_.append((curr.left, j - 1))\n",
+    "                next_.append((curr.right, j + 1))\n",
+    "\n",
+    "        stack = next_\n",
+    "\n",
+    "    result: list[int] = []\n",
+    "    for k in sorted(ordering.keys()):\n",
+    "        result.append(ordering[k])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert bottomView(BinaryTreeNode.from_array([1, 2, 3, None, None, 5, 6, 7, 8, None, None, None, None, None, None])) == [7, 5, 8, 6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "262c0c19",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/KV4mRzTjlAk?si=lzQH9S7GrgZKUjMj\n",
+    "Right / Left view of a Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d6decb1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Right Side View: Time - O(N)\n",
+    "def rightSideView(root: BinaryTreeNode) -> list[int]:\n",
+    "    ordering: dict[int, int] = dict()\n",
+    "    def inOrder(curr: BinaryTreeNode, i: int = 0):\n",
+    "        nonlocal ordering\n",
+    "        if not curr:\n",
+    "            return\n",
+    "        else:\n",
+    "            ordering[i] = curr.val\n",
+    "            inOrder(curr.left, i + 1)\n",
+    "            inOrder(curr.right, i + 1)\n",
+    "\n",
+    "    # Backtrack and store the results\n",
+    "    inOrder(root)\n",
+    "    result: list[int] = []\n",
+    "    for k in sorted(ordering.keys()):\n",
+    "        result.append(ordering[k])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert rightSideView(BinaryTreeNode.from_array([1, 2, 3, None, 5, None, 4])) == [1, 3, 4]\n",
+    "assert rightSideView(BinaryTreeNode.from_array([1, 2, 3, 4])) == [1, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "367ea6a3",
+   "metadata": {
+    "lines_to_next_cell": 1,
+    "title": "Left Side View: Time - O(N)"
+   },
+   "outputs": [],
+   "source": [
+    "def leftSideView(root: BinaryTreeNode) -> list[int]:\n",
+    "    ordering: dict[int, int] = dict()\n",
+    "    def backtrack(curr: BinaryTreeNode, i: int = 0):\n",
+    "        nonlocal ordering\n",
+    "        if not curr:\n",
+    "            return\n",
+    "        else:\n",
+    "            ordering[i] = curr.val\n",
+    "            backtrack(curr.right, i + 1)\n",
+    "            backtrack(curr.left, i + 1)\n",
+    "\n",
+    "    # Backtrack and store the results\n",
+    "    backtrack(root)\n",
+    "    result: list[int] = []\n",
+    "    for k in sorted(ordering.keys()):\n",
+    "        result.append(ordering[k])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert leftSideView(BinaryTreeNode.from_array([1, 2, 3, None, 5, None, 4])) == [1, 2, 5]\n",
+    "assert leftSideView(BinaryTreeNode.from_array([1, 2, 3, 4])) == [1, 2, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40a6b0a2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Better solution from Striver\n",
+    "def rightSideViewStriver(root: BinaryTreeNode) -> list[int]:\n",
+    "    result: list[int] = []\n",
+    "    def backtrack(curr: BinaryTreeNode, level: int = 1):\n",
+    "        \"\"\"\n",
+    "        Modified preorder traversal - RRL.\n",
+    "        We insert to our result only when we are coming the level for the first time.\n",
+    "        \"\"\"\n",
+    "        nonlocal result\n",
+    "        if not curr:\n",
+    "            return\n",
+    "        else:\n",
+    "            if level > len(result):\n",
+    "                result.append(curr.val)\n",
+    "            backtrack(curr.right, level + 1)\n",
+    "            backtrack(curr.left, level + 1)\n",
+    "\n",
+    "    # Recurse and save the results\n",
+    "    backtrack(root)\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert rightSideViewStriver(BinaryTreeNode.from_array([1, 2, 3, None, 5, None, 4])) == [1, 3, 4]\n",
+    "assert rightSideViewStriver(BinaryTreeNode.from_array([1, 2, 3, 4])) == [1, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d234569",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/nKggNAiEpBE?si=abzPcl6pKzyFpJ2i\n",
+    "Problem Link: https://leetcode.com/problems/symmetric-tree/submissions/1227182868"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dae62c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isSymmetric(root: BinaryTreeNode) -> bool:\n",
+    "    def backtrack(left: BinaryTreeNode, right: BinaryTreeNode) -> bool:\n",
+    "        if not left or not right:\n",
+    "            return left == right\n",
+    "        else:\n",
+    "            return left.val == right.val and backtrack(left.left, right.right) and backtrack(left.right, right.left)\n",
+    "\n",
+    "    def isPalindrome(arr: list[BinaryTreeNode]) -> bool:\n",
+    "        N = len(arr)\n",
+    "        i, j = 0, N - 1\n",
+    "        while i < j:\n",
+    "            left, right = arr[i].val if arr[i] else None, arr[j].val if arr[j] else None\n",
+    "            i, j = i + 1, j - 1\n",
+    "            if left != right:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "    def iterate() -> bool:\n",
+    "        stack: list[BinaryTreeNode] = [root]\n",
+    "        while stack:\n",
+    "            next_: list[BinaryTreeNode] = []\n",
+    "            for curr in stack:\n",
+    "                if curr:\n",
+    "                    next_.append(curr.left)\n",
+    "                    next_.append(curr.right)\n",
+    "\n",
+    "            if not isPalindrome(next_):\n",
+    "                return False\n",
+    "            else:\n",
+    "                stack = next_\n",
+    "        else:\n",
+    "            return True\n",
+    "\n",
+    "    # return backtrack(root.left, root.right)\n",
+    "    return iterate()\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isSymmetric(BinaryTreeNode.from_array([1, 2, 2, None, 3, None, 3])) == False\n",
+    "assert isSymmetric(BinaryTreeNode.from_array([1, 2, 2, None, 3, 3, None])) == True"
    ]
   }
  ],
