Striver A2Z: Binary Trees - 8, LC Practice

--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -1650,6 +1650,7 @@
      "iopub.status.idle": "2024-04-09T14:59:34.151485Z",
      "shell.execute_reply": "2024-04-09T14:59:34.150719Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.022859,
      "end_time": "2024-04-09T14:59:34.153313",
@@ -1700,6 +1701,84 @@
     "# Testing the solution\n",
     "assert isSymmetric(BinaryTreeNode.from_array([1, 2, 2, None, 3, None, 3])) == False\n",
     "assert isSymmetric(BinaryTreeNode.from_array([1, 2, 2, None, 3, 3, None])) == True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d1fac60",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/fmflMqVOC7k?si=1AX2ea08UGtxw0mj\n",
+    "Print Root to Node path in Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0244aad",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def rootToNodePath(root: BinaryTreeNode, target: int) -> list[int]:\n",
+    "    \"Time: O(N), Space: O(H)\"\n",
+    "    path: list[int] = []\n",
+    "    def backtrack(curr: BinaryTreeNode) -> bool:\n",
+    "        if not curr:\n",
+    "            return False\n",
+    "        else:\n",
+    "            path.append(curr.val)\n",
+    "            result = curr.val == target or backtrack(curr.left) or backtrack(curr.right)\n",
+    "            if not result:\n",
+    "                path.pop()\n",
+    "\n",
+    "            return result\n",
+    "\n",
+    "    backtrack(root)\n",
+    "    return path\n",
+    "\n",
+    "\n",
+    "# Testing the solution\n",
+    "rootToNodePath(BinaryTreeNode.from_array([1, 2, 3, 4, 5, None, None, None, None, 6, 7]), 7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7a03676",
+   "metadata": {},
+   "source": [
+    "Lowest common ancestor\n",
+    "Video Link: https://youtu.be/_-QHfMDde90?si=3pJ5ysXG6FArt3Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a501b5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem Link: https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/submissions/1228152859\n",
+    "def lowestCommonAncestor(root: BinaryTreeNode, p: BinaryTreeNode, q: BinaryTreeNode) -> BinaryTreeNode:\n",
+    "    def backtrack(curr: BinaryTreeNode) -> BinaryTreeNode:\n",
+    "        if not curr:\n",
+    "            return curr\n",
+    "        else:\n",
+    "            left = backtrack(curr.left)\n",
+    "            right = backtrack(curr.right)\n",
+    "            if left and right:\n",
+    "                return curr\n",
+    "            elif curr in (p, q):\n",
+    "                return curr\n",
+    "            else:\n",
+    "                return left if left else right\n",
+    "\n",
+    "    return backtrack(root)\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp: BinaryTreeNode = BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4])\n",
+    "assert lowestCommonAncestor(temp, p=temp.left, q=temp.left.right.right).val == 5"
    ]
   }
  ],
