--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -1840,6 +1840,7 @@
      "iopub.status.idle": "2024-04-09T14:59:31.030360Z",
      "shell.execute_reply": "2024-04-09T14:59:31.029659Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.022756,
      "end_time": "2024-04-09T14:59:31.032046",
@@ -1880,6 +1881,111 @@
     "# Testing the solution\n",
     "temp: BinaryTreeNode = BinaryTreeNode.from_array([3,5,1,6,2,0,8,None,None,7,4])\n",
     "assert lowestCommonAncestor(temp, p=temp.left, q=temp.left.right.right).val == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4388e14",
+   "metadata": {},
+   "source": [
+    "Problem Link: https://leetcode.com/problems/maximum-width-of-binary-tree/submissions/1228429287"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "876bfe38",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def widthOfBinaryTree(root: BinaryTreeNode) -> int:\n",
+    "    boundaries: dict[int, tuple[int, int]] = dict()\n",
+    "    max_width = 1\n",
+    "    def backtrack(curr: BinaryTreeNode, height: int, width: int):\n",
+    "        nonlocal boundaries, max_width\n",
+    "        if not curr:\n",
+    "            return\n",
+    "        else:\n",
+    "            curr_lr = boundaries.get(height, (2 ** height, 0))\n",
+    "            boundaries[height] = (min(curr_lr[0], width + 1), max(curr_lr[1], width + 1))\n",
+    "            max_width = max(max_width, boundaries[height][1] - boundaries[height][0] + 1)\n",
+    "            backtrack(curr.left, height + 1, width * 2)\n",
+    "            backtrack(curr.right, height + 1, (width * 2) + 1)\n",
+    "\n",
+    "    backtrack(root, 0, 0)\n",
+    "    return max_width\n",
+    "\n",
+    "# Testing the Solution\n",
+    "assert widthOfBinaryTree(BinaryTreeNode.from_array([1, 3, 2, 5, None, None, 9, 6, None, 7])) == 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1a33bbb",
+   "metadata": {},
+   "source": [
+    "Leetcode Easy: https://leetcode.com/problems/maximum-average-subarray-i/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25620d4a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def findMaxAverage(nums: list[int], k: int) -> float:\n",
+    "    sum_ = sum(nums[:k])\n",
+    "    max_avg = sum_ / k\n",
+    "    for i in range(k, len(nums)):\n",
+    "        sum_ = sum_ + nums[i] - nums[i - k]\n",
+    "        max_avg = max(max_avg, sum_ / k)\n",
+    "\n",
+    "    return max_avg\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findMaxAverage([1,12,-5,-6,50,3], 4) == 12.75\n",
+    "assert findMaxAverage([5], 1) == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bcc5995",
+   "metadata": {},
+   "source": [
+    "Easy Leetcode Problem Link: https://leetcode.com/problems/average-of-levels-in-binary-tree/submissions/1228468053"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7efaf1c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def averageOfLevels(root: BinaryTreeNode) -> list[float]:\n",
+    "    result: list[float] = []\n",
+    "    queue: list[BinaryTreeNode] = [root]\n",
+    "    while queue:\n",
+    "        next_: list[BinaryTreeNode] = []\n",
+    "        sum_ = count_ = 0\n",
+    "        for curr in queue:\n",
+    "            sum_, count_ = sum_ + curr.val, count_ + 1\n",
+    "            if curr.left:\n",
+    "                next_.append(curr.left)\n",
+    "            if curr.right:\n",
+    "                next_.append(curr.right)\n",
+    "        result.append(sum_ / count_)\n",
+    "        queue = next_\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert averageOfLevels(BinaryTreeNode.from_array([3,9,20,None,None,15,7])) == [3.00,14.50,11.00]"
    ]
   }
  ],
